# governed-stack

./: .gitignore  README.md  pyproject.toml
docs/: INSTALLATION_CREDENTIALS.md  cesr-transit-encoding-analysis.md  transit-keri-schema-synthesis.md
governed-stacks/: ai-orchestrator.toml  governed-stack.toml  keri-git-said.toml  keri-rlm.toml  kgql.toml
schemas/: algorithm_daid.json  installation_credential.json  schema_daid.json  stack_credential.json  workspace_credential.json
scripts/: dogfood_keri_workspace.py
src/governed_stack/: __init__.py  cache.py  cli.py  codes.py  handlers.py  installation_credential.py  manager.py  streaming.py  verification.py
src/governed_stack/keri/: __init__.py  registry.py  runtime.py
src/keri_sec/: __init__.py  base_registry.py  cache.py  cli.py  daid_verification.py  extensions.py  installation_credential.py  lock_file.py  manager.py  permissions.py  stacks.py  streaming.py  tel_anchoring.py  verification.py
src/keri_sec/algorithms/: __init__.py  daid.py  registry.py
src/keri_sec/attestation/: __init__.py  boundaries.py  tiers.py
src/keri_sec/governance/: __init__.py  cardinal_checker_bridge.py  cardinal_gaid.py  gate.py
src/keri_sec/keri/: __init__.py  infrastructure.py  registry.py  runtime.py  said_ref.py
src/keri_sec/runtime/: __init__.py  checker.py  gaid.py  manifest.py  resolver.py
src/keri_sec/schemas/: __init__.py  lock_file.json  registry.py
src/keri_sec/spac/: __init__.py  cesr_codes.py  disclosure.py  essr.py  oobi_exchange.py  ori_manager.py  policy.py
tests/: __init__.py  test_algorithm_daid.py  test_attack_scenarios.py  test_attestation_overhead.py  test_base_registry.py  test_cardinal_gaid.py  test_credential_handlers.py  test_daid_verification.py  test_dogfood.py  test_governance_gate.py  test_handlers.py  test_manager.py  test_package_daid.py  test_permissions.py  test_refactor_sandbox.py  test_runtime_gaid.py  test_schema_daid.py  test_tel_end_to_end.py
