[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keri-sec"
version = "0.1.0"
description = "KERI-governed dependency security — cryptographic source of truth for version constraints"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Nicholas-Keystate" },
]
keywords = [
    "keri",
    "dependencies",
    "governance",
    "version",
    "uv",
    "said",
    "cryptographic",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
]
dependencies = [
    "keri>=1.2.0",
    "hio>=0.6.14",
    "packaging>=23.0",
    "keri-governance @ git+https://github.com/Nicholas-Keystate/keri-governance.git",
    "keri-infra @ file:///Users/hun-magnon/Documents/KERI/keri-infra",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Nicholas-Keystate/keri-sec"
Documentation = "https://github.com/Nicholas-Keystate/keri-sec#readme"
Repository = "https://github.com/Nicholas-Keystate/keri-sec"
Issues = "https://github.com/Nicholas-Keystate/keri-sec/issues"

[project.scripts]
keri-sec = "keri_sec.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/keri_sec"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.keri-sec]
stack_said = "ECsfg7VD6EjGcTMv7I9nzsZIMila6prLhpU4CYfum1-n"
owner_baid = "BAID_WORKSPACE"
workspace_said = "EPRDHESlDDaz59P7ou-VkizAABNVH4K7T1RPz2aXKA-N"
